# covid_abwasser_tirol

./: README.md  pyproject.toml
covid_abwasser_tirol/: __init__.py  bot.py  flycheck_utils.py  utils.py
tests/: test_utils.py
